# pynq-aes-music-player

./: Makefile  README.md  audio_player.tcl
app/: CMakeLists.txt  adau1761.cpp  adau1761.h  aes.cpp  aes.h  aes_thread.cpp  aes_thread.h  component.mk  directory_navigator.cpp  directory_navigator.h  directory_navigator.hpp  main.cpp  player_thread.cpp  player_thread.h  pthread_wrapper.h  ui_thread.cpp  ui_thread.h  util.cpp  util.h  virtual_file_wrapper.cpp  virtual_file_wrapper.h
constr/: constraints.xdc
libaxidma/: libaxidma.c  library.mk
libaxidma/include/: axidma_ioctl.h  libaxidma.h
project-spec/configs/: config
project-spec/meta-user/conf/: user-rootfsconfig
project-spec/meta-user/recipes-modules/axis-fifo/: axis-fifo.bb
rtl/AXI_aes_core_1_0/: component.xml
rtl/AXI_aes_core_1_0/example_designs/bfm_design/: AXI_aes_core_v1_0_tb.sv  design.tcl
rtl/AXI_aes_core_1_0/example_designs/debug_hw_design/: AXI_aes_core_v1_0_hw_test.tcl  design.tcl
rtl/AXI_aes_core_1_0/hdl/: AXI_aes_core_v1_0.v  AXI_aes_core_v1_0_M_AXIS_cipher.v  AXI_aes_core_v1_0_M_AXIS_decipher.v  AXI_aes_core_v1_0_S_AXI.v  AXI_aes_core_v1_0_S_AXIS_cipher.v  AXI_aes_core_v1_0_S_AXIS_decipher.v
rtl/AXI_aes_core_1_0/src/: aes_inv_cipher_top.v
rtl/AXI_aes_core_1_0/xgui/: AXI_aes_core_v1_0.tcl
rtl/I2S_slave_1.0/: component.xml
rtl/I2S_slave_1.0/hdl/: I2S_slave_v1_0.v  tb_I2S_slave_v1_0.v
rtl/I2S_slave_1.0/xgui/: I2S_slave_v1_0.tcl
rtl/SPI_master_1.0/: component.xml
rtl/SPI_master_1.0/hdl/: SPI_master_v1_0.v  tb_SPI_master_v1_0.v
rtl/SPI_master_1.0/xgui/: SPI_master_v1_0.tcl
(+12 files in other folders)
